Removes blurs to fix animation issues on ios

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -103,8 +103,7 @@ div.loading-icon-container {
    left: 0;
    width: 100%;
    height: 100%;
-   -webkit-backdrop-filter: blur(20px);
-   backdrop-filter: blur(20px);
+   background-color: rgba(0, 0, 0, 0.9);
 }
 
 div.loading-icon-container>svg {
@@ -376,31 +375,23 @@ select:focus {
 @keyframes modal-open {
    from {
       opacity: 0;
-      -webkit-backdrop-filter: blur(0);
-      backdrop-filter: blur(0);
       background-color: rgba(0, 0, 0, 0.0);
    }
 
    to {
       opacity: 1;
-      -webkit-backdrop-filter: blur(100px);
-      backdrop-filter: blur(100px);
-      background-color: rgba(0, 0, 0, 0.8);
+      background-color: rgba(0, 0, 0, 0.6);
    }
 }
 
 @keyframes modal-close {
    from {
       opacity: 1;
-      -webkit-backdrop-filter: blur(100px);
-      backdrop-filter: blur(100px);
-      background-color: rgba(0, 0, 0, 0.8);
+      background-color: rgba(0, 0, 0, 0.6);
    }
 
    to {
       opacity: 0;
-      -webkit-backdrop-filter: blur(0);
-      backdrop-filter: blur(0);
       background-color: rgba(0, 0, 0, 0.0);
    }
 }
@@ -473,7 +464,8 @@ div#party-qrcode {
    padding-left: 15px;
 }
 
-#expires-at-time, #expires-at-date {
+#expires-at-time,
+#expires-at-date {
    font-size: 1.2rem;
    font-weight: bold;
    color: white;
